Report and Users form

--- a/UCC-TRMS/UCC-TRMS.vbproj
+++ b/UCC-TRMS/UCC-TRMS.vbproj
@@ -125,10 +125,22 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="reports.Designer.vb">
+      <DependentUpon>reports.vb</DependentUpon>
+    </Compile>
+    <Compile Include="reports.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="thesis.Designer.vb">
       <DependentUpon>thesis.vb</DependentUpon>
     </Compile>
     <Compile Include="thesis.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="users.Designer.vb">
+      <DependentUpon>users.vb</DependentUpon>
+    </Compile>
+    <Compile Include="users.vb">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
@@ -154,8 +166,14 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="reports.resx">
+      <DependentUpon>reports.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="thesis.resx">
       <DependentUpon>thesis.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="users.resx">
+      <DependentUpon>users.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
