--- a/UCC-TRMS/UCC-TRMS.vbproj
+++ b/UCC-TRMS/UCC-TRMS.vbproj
@@ -82,6 +82,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addStudent.Designer.vb">
+      <DependentUpon>addStudent.vb</DependentUpon>
+    </Compile>
+    <Compile Include="addStudent.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="addThesis.Designer.vb">
       <DependentUpon>addThesis.vb</DependentUpon>
     </Compile>
@@ -155,6 +161,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="addStudent.resx">
+      <DependentUpon>addStudent.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="addThesis.resx">
       <DependentUpon>addThesis.vb</DependentUpon>
     </EmbeddedResource>
