--- a/UCC-TRMS/UCC-TRMS.vbproj
+++ b/UCC-TRMS/UCC-TRMS.vbproj
@@ -147,6 +147,12 @@
     <Compile Include="reports.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="studentArchive.Designer.vb">
+      <DependentUpon>studentArchive.vb</DependentUpon>
+    </Compile>
+    <Compile Include="studentArchive.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="thesis.Designer.vb">
       <DependentUpon>thesis.vb</DependentUpon>
     </Compile>
@@ -196,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="reports.resx">
       <DependentUpon>reports.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="studentArchive.resx">
+      <DependentUpon>studentArchive.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="thesis.resx">
       <DependentUpon>thesis.vb</DependentUpon>
