--- a/UCC-TRMS/UCC-TRMS.vbproj
+++ b/UCC-TRMS/UCC-TRMS.vbproj
@@ -52,6 +52,9 @@
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>..\..\..\..\Downloads\LIBRARY MANAGEMENT SYSTEM\LIBRARY MANAGEMENT SYSTEM\library_transaction\library_transaction\bin\Debug\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
+    <Reference Include="EasyHTMLReports, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EasyHTMLReports.1.0.0\lib\EasyHTMLReports.dll</HintPath>
+    </Reference>
     <Reference Include="Guna.UI2">
       <HintPath>..\..\..\Downloads\Guna.UI2.dll</HintPath>
     </Reference>
@@ -92,6 +95,12 @@
       <DependentUpon>addThesis.vb</DependentUpon>
     </Compile>
     <Compile Include="addThesis.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addUsers.Designer.vb">
+      <DependentUpon>addUsers.vb</DependentUpon>
+    </Compile>
+    <Compile Include="addUsers.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="borrowers.Designer.vb">
@@ -191,6 +200,9 @@
     <EmbeddedResource Include="addThesis.resx">
       <DependentUpon>addThesis.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="addUsers.resx">
+      <DependentUpon>addUsers.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="borrowers.resx">
       <DependentUpon>borrowers.vb</DependentUpon>
     </EmbeddedResource>
@@ -245,6 +257,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
